<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff3f3f3">

    <View
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/bg_mime" />

    <LinearLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/view_home_page_header"></include>

        <include layout="@layout/view_wallet_recharge"></include>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.android.banana.view.LabelTextView
                    android:id="@+id/item_group"
                    style="@style/tabMeFragmentItemStyle"
                    android:drawableLeft="@drawable/ic_tab_me_group"
                    android:text="@string/tab_me_item_1" />

                <com.android.banana.view.LabelTextView
                    android:id="@+id/item_play"
                    style="@style/tabMeFragmentItemStyle"
                    android:drawableLeft="@drawable/ic_tab_me_play"
                    android:text="@string/tab_me_item_2" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.android.banana.view.LabelTextView
                        android:id="@+id/item_shirt"
                        style="@style/tabMeFragmentItemStyle"
                        android:drawableLeft="@drawable/ic_tab_me_shirt"
                        android:text="@string/tab_me_item_3" />

                    <ImageView
                        android:id="@+id/shirt_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="30dp" />
                </FrameLayout>

                <com.android.banana.view.LabelTextView
                    android:id="@+id/item_achievements"
                    style="@style/tabMeFragmentItemStyle"
                    android:drawableLeft="@drawable/ic_tab_me_honor"
                    android:text="@string/tab_me_item_5" />

                <com.android.banana.view.LabelTextView
                    android:id="@+id/item_appstore"
                    style="@style/tabMeFragmentItemStyle"
                    android:drawableLeft="@drawable/ic_tab_me_mall"
                    android:text="@string/tab_me_item_6" />

                <com.android.banana.view.LabelTextView
                    android:id="@+id/item_address"
                    style="@style/tabMeFragmentItemStyle"
                    android:drawableLeft="@drawable/ic_tab_me_address"
                    android:text="@string/tab_me_item_7" />

                <com.android.banana.view.LabelTextView
                    android:id="@+id/item_safepay"
                    style="@style/tabMeFragmentItemStyle"
                    android:drawableLeft="@drawable/ic_tab_me_pay_safe"
                    android:text="@string/tab_me_item_8" />


                <com.android.banana.view.LabelTextView
                    android:id="@+id/item_setting"
                    style="@style/tabMeFragmentItemStyle"
                    android:layout_marginBottom="@dimen/dp40"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_tab_me_setting"
                    android:text="@string/tab_me_item_9"
                    app:draw_bottom_line_without_right="false" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</FrameLayout>