<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_title"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/certification_bg">


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/name_lay"
            android:layout_alignRight="@+id/name_lay"
            android:layout_marginBottom="10dp"
            android:src="@drawable/icon_certificate_person" />

        <LinearLayout
            android:id="@+id/name_lay"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_above="@+id/id_card_lay"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/real_name"
                android:textColor="@color/colorTextG4"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/name_edt"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_edit_bg"
                android:hint="@string/please_input_name"
                android:inputType=""
                android:paddingLeft="5dp"
                android:textColor="@color/colorTextG4"
                android:textColorHint="@color/colorTextG2"
                android:maxLines="1"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_card_lay"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/id_card_num"
                android:textColor="@color/colorTextG4"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/id_card_edt"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/shape_edit_bg"
                android:hint="@string/please_input_id_card_num"
                android:paddingLeft="5dp"
                android:textColor="@color/colorTextG4"
                android:textColorHint="@color/colorTextG2"
                android:maxLines="1"
                android:textSize="10sp" />
        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/confirm_txt"
        style="@style/forget_btn_style"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_red_btn"
        android:enabled="false"
        android:text="@string/commit" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/info"
        android:textColor="@color/colorTextG4"
        android:textSize="14sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/please_input_real_info"
        android:textColor="@color/tab_gray"
        android:textSize="14sp"
        android:visibility="gone" />

</LinearLayout>